styles.css
body {
    font-family: 'Arial', sans-serif;
    background-color: #f4f4f4;
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.container {
    background-color: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    width: 300px;
    text-align: center;
}

.input-container {
    margin-top: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
}

input {
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px 0 0 5px; /* Rounded corners only on the left side */

}

button {
    background-color: #4caf50;
    color: #fff;
    border: none;
    padding: 10px 15px;
    border-radius: 0 5px 5px 0; /* Rounded corners only on the right side */
    cursor: pointer;
}

button:hover {
    background-color: #45a049;
}

.separator-line {
    border-top: 1px solid #ccc;
    margin-top: 20px;
}

.tasks-container {
    text-align: left;
    margin-top: 20px;
}

.task {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
    overflow-wrap: break-word;
    position: relative;
}

.checkbox {
    margin-right: 10px;
}

input[type="checkbox"] {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    width: 16px;
    height: 16px;
    border: 1px solid #ccc;
    border-radius: 50%;
    margin-right: 10px;
    cursor: pointer;
}

input[type="checkbox"]:checked + .task-text {
    color: #888; /* Change text color to gray when checked */
}

input[type="checkbox"]:checked {
    background-color: #4caf50; /* Change the color when checked */
    border-color: #4caf50;
}


.task-text {
    flex-grow: 1;
    word-break: break-word;    /* For older browsers */
}

.remove-button {
    background-color: #ff4d4d;
    color: #fff;
    border: none;
    padding: 8px;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s ease, opacity 0.3s ease;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
    opacity: 0.3;
    display: none;
}

.task:hover .remove-button {
    display: inline-block;
}

.remove-button:hover {
    background-color: #ff4d4d;
    opacity: 1;
}


.remove-button i {
    font-size: 16px;
}

.task:hover .remove-button {
    display: inline-block;
}

